# ThreadProcess

./: .gitignore  README.md  ThreadProcess.py  __init__.py  example.py  knockknock.txt  output.txt  pyproject.toml  threadProcess.py
tests/: test_threadprocess.py
threadprocess/: __init__.py  example.py
