[tool.poetry]
name = "threadprocess"
version = "0.1.0"
description = "Sub-thread and sub-process package"
authors = ["David Megson-Smith <davesmivesr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ensure the include section is defined correctly as an array
include = [
    "threadprocess/**/*.py",
    "README.md"
]